# libusb-android

./: .gitignore  README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/org/libusb_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/org/helper/: Str.java
app/src/main/java/org/libusb_android/: EnumeratingUsbDevices.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/libusb_android/: ExampleUnitTest.java
helper/: CMakeLists.txt  build.gradle  proguard-rules.pro
helper/src/androidTest/java/org/helper/: ExampleInstrumentedTest.java
helper/src/main/: AndroidManifest.xml
helper/src/main/java/org/helper/: Str.java
helper/src/main/res/values/: strings.xml
helper/src/test/java/org/helper/: ExampleUnitTest.java
libusb/: CMakeLists.txt  build.gradle
libusb/src/androidTest/java/org/libusb/: ExampleInstrumentedTest.java
libusb/src/main/: AndroidManifest.xml
libusb/src/main/cpp/: libusbjni.cpp  libusbjni.h  org_libusb_LibUSBJNI.cpp  org_libusb_LibUSBJNI.h
libusb/src/main/cpp/libusb/: core.c  libusbi.h
libusb/src/main/java/org/libusb/: LibUSBClassCode.java  LibUSBJNI.java
libusb/src/main/res/values/: strings.xml
libusb/src/test/java/org/libusb/: ExampleUnitTest.java
